[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/chest.png" type="Texture" id=1]
[ext_resource path="res://objects/scripts/weapon_chest.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 100.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32.2542, 10 )

[node name="weapon_chest" type="Node2D"]
script = ExtResource( 2 )
guns_pool = [ "gun", "shotgun", "boomerang", "bazooka" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
playing = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 22.2487 )
shape = SubResource( 7 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
bbcode_enabled = true
bbcode_text = "Отдай своё оружие, заплати 10 монет и получи новое оружие!
шансы получения оружий:
[color=gray]40% - обычное[/color]
[color=blue]30% - необычное[/color]
[color=red]20% - редкое[/color]
[color=yellow][wave amp=20 freq=2]10% - ЛЕГЕНДАРНОЕ[/wave][/color]

(Заплати 20 монет и повысь свои шансы на легендарное в 5 раз!!!)"
text = "Отдай своё оружие, заплати 10 монет и получи новое оружие!
шансы получения оружий:
40% - обычное
30% - необычное
20% - редкое
10% - ЛЕГЕНДАРНОЕ

(Заплати 20 монет и повысь свои шансы на легендарное в 5 раз!!!)"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
anchor_top = 0.85
anchor_bottom = 0.85
margin_left = 10.0
margin_top = 5.0
text = "заплатить 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 0.85
margin_top = 5.0
margin_right = -10.0
grow_horizontal = 0
text = "заплатить 20"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_Button2_pressed"]
